c3prj1_deck/grade.txt
Grading at Wed 04 Oct 2023 07:00:26 AM UTC
Compiling deck.c
deck.c: In function ‘add_card_to’:
deck.c:51:34: error: incompatible types when assigning to type ‘card_t *’ {aka ‘struct card_tag *’} from type ‘card_t’ {aka ‘struct card_tag’}
   51 |   deck->cards[deck->n_cards++] = c;
      |                                  ^
deck.c: At top level:
deck.c:56:2: error: ISO C does not allow extra ‘;’ outside of a function [-Werror=pedantic]
   56 | };
      |  ^
deck.c: In function ‘add_empty_card’:
deck.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | };
      | ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
